[package]
name = "cslview"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.34"
quick-xml = "0.39"
rfd = "0.15"
resvg = "0.47"
serde = { version = "1", features = ["derive"] }
svg2pdf = "0.13"
toml = "0.8"

[profile.dev]
opt-level = 1
